2003-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c : Add or fix commenting of DebugString so that
	module does not require Windows.
	* lcms: Updated to release 1.10.

2003-05-07  William Radcliffe  <billr@corbis.com>

	* VisualMagick\bin : Brought the MGK files back into sync with
	the rest of the package and added types for meta.c.
	* VisualMagick\bin\win32\ATL : removed config files in order to
	prevent very old ATL project from being picked up in the config

2003-05-06  William Radcliffe  <billr@corbis.com>

	* VisualMagick\lcms\LIBRARY.txt : a define to prevent popup message
	box behaviour.
	* VisualMagick\configure\ : New feature - -t consolidates all the
	coders into on library for the static build in order to make the
	build process tolerable.
	* coders\xtrn.c : new support for BSTR - wdie character data
	* coders\svg.c : put back logic that allows the -size parameter to
	control the pixel dimensions of the output image.
	* coders\meta.c : added support for wide character parsing of iptc
	and 8BIM formats.

2003-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh : Update to reflect development status.

2003-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0 Released.
	* version.sh (LIBRARY_REVISION): Updated for the 1.0 release.
	* magick/studio.h: Add fix to avoid problems caused by zlib
	under AIX.
	* magick/cache.h: Parameterized prototypes to make them easier
	to follow.
	* filters/analyze.c: Replace C++ comments with C comments.
	* magick/command.c: For the composite, convert, identify, mogrify,
	and montage commands, make sure a usage error is returned if a
	usage message is printed. This is useful for ImageMagickObject
	users who won't see the usage message if stdio is not supported.
	* locale/C.mgk: Added "UsageError" error.  Added missing closure
	to <Corrupt> tag which caused most/many message lookups to fail.
	* magick/nt_base.h: Fixed a compile problem caused by masking