@@ -53,6 +53,15 @@
 </tr>
 </table>
 <p>
+2003-05-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/logo.c (ReadLOGOImage): Added a "TRANSPARENT:" pattern
+        image which can be tiled to form the background of transparent
+        images.
+
+</UL>
+<p>
 2003-05-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
